--- a/css/style.css
+++ b/css/style.css
@@ -3448,6 +3448,11 @@ section {
   padding: 120px 0;
   position: relative;
 }
+
+.blog{
+  padding: 70px 0;
+}
+
 @media (max-width: 991.98px) {
   section {
     padding: 60px 0;
