nouvelle modif du header

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ Tag:  bidding, fiverr, freelance marketplace, freelancers, freelancing, gigs, hi
 
 
 .posi .slideing:hover{
-  background-color: #f88a0c;
+  background-color: #fdc110;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&amp;display=swap");
